src/styles/search.css
.nasa-logo {
  height: 10%;
  max-width: 20%;
  align-self: center;
  padding: 0%;
  background-color: transparent;
}

.search-bar-container {
  margin: 2%;
  text-align: center;
}

.search-form {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 0;
}

.search-input {
  font-size: 18px;
  padding: 10px;
  border-radius: 4px 0 0 4px;
  border: 1px solid #ccc;
  width: 300px;
}

.search-button {
  background-color: #c40010;
  color: white;
  border-radius: 0 4px 4px 0;
  border: none;
  padding: 10px 20px;
  font-size: 18px;
  cursor: pointer;
}

.search-button:hover {
  background-color: #3e8e41;
}

.tag-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
  margin-bottom: 2rem;
  text-align: center;
}

.tag {
  padding: 6px 12px;
  background-color: #c40010;
  color: white;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  transition: background-color 0.2s;
}

.tag:hover {
  background-color: #3e8e41;
}

